name:          raaz-cipher
version:       0.0.0.1
synopsis:      Implementation of the AES cipher for raaz library
homepage:      http://github.com/piyush-kurur/raaz
license:       BSD3
license-file:  LICENSE
author:        Satvik Chauhan
maintainer:    satvikc@iitk.ac.in
category:      Codec, Raaz
build-type:    Simple
cabal-version: >=1.9.2

bug-reports: https://github.com/piyush-kurur/raaz/issues

extra-source-files: ecryptTestData/salsa20_20.vectors
                  , ecryptTestData/salsa20_12.vectors
                  , ecryptTestData/salsa20_8.vectors

source-repository head
  type: git
  location: https://github.com/piyush-kurur/raaz
  subdir: raaz-cipher

library
  exposed-modules: Raaz.Cipher.AES.Type
                 , Raaz.Cipher.AES.Internal
                 , Raaz.Cipher.AES.CBC
                 , Raaz.Cipher.AES.CTR
                 , Raaz.Cipher.AES.ECB
                 , Raaz.Cipher.AES
                 , Raaz.Cipher.Salsa20
                 , Raaz.Cipher.Salsa20.Internal
  other-modules: Raaz.Cipher.Util.GF
               , Raaz.Cipher.AES.Block.Type
               , Raaz.Cipher.AES.CBC.CPortable
               , Raaz.Cipher.AES.CBC.Instance
               , Raaz.Cipher.AES.CBC.Ref
               , Raaz.Cipher.AES.CBC.Type
               , Raaz.Cipher.AES.CTR.CPortable
               , Raaz.Cipher.AES.CTR.Instance
               , Raaz.Cipher.AES.CTR.Ref
               , Raaz.Cipher.AES.CTR.Type
               , Raaz.Cipher.AES.ECB.CPortable
               , Raaz.Cipher.AES.ECB.Instance
               , Raaz.Cipher.AES.ECB.Ref
               , Raaz.Cipher.AES.ECB.Type
               , Raaz.Cipher.Salsa20.Block.Internal
               , Raaz.Cipher.Salsa20.Block.Type
               , Raaz.Cipher.Salsa20.Instances
               , Raaz.Cipher.AES.Block.Internal
  build-depends: base                           >= 4.5 && < 4.8
               , bytestring                     >= 0.9 && < 0.11
               , data-default                   >= 0.4 && < 0.6
               , mtl                            >= 2.1 && < 2.2
               --
               -- Raaz dependencies
               --
               , raaz-core                      >=0.0.0.1 && < 0.0.0.2
  ghc-options: -Wall

  if impl(ghc >= 7.6)
    cpp-options: -DUseKinds
    extensions: DataKinds

  c-sources: cbits/raaz/cipher/cportable/aes.c
           , cbits/raaz/cipher/cportable/salsa20.c
  include-dirs: cbits


  if os(linux)
     cc-options: -Wall -Werror -O3 -DRAAZ_HAVE_GCC
  else
     cc-options:

test-Suite tests
  type: exitcode-stdio-1.0
  hs-source-dirs: tests
  main-is: Main.hs

  other-modules: Modules.AES
               , Modules.AES.Block
               , Modules.AES.Defaults
               , Modules.AES.ECB
               , Modules.AES.CBC
               , Modules.AES.CTR
               , Modules.EcryptTest
               , Modules.EcryptTestParser
               , Modules.Salsa20
               , Modules.Salsa20.Block
               , Modules.Salsa20.Stream
               , Modules.Util

  build-depends: base                           >= 4.5 && < 4.8
               , bytestring                     >= 0.9 && < 0.11
               , data-default                   >= 0.5 && < 0.6
               , HUnit                          >= 1.2 && < 1.3
               , parsec                         >= 3.0 && < 4.0
               , QuickCheck                     >= 2.4 && < 2.7
               , test-framework                 >= 0.6 && < 0.9
               , test-framework-hunit           >= 0.2 && < 0.4
               , test-framework-quickcheck2     >= 0.2 && < 0.4
               --
               -- Raaz dependencies
               --
               , raaz-core                      >=0.0.0.1 && < 0.0.0.2
               , raaz-cipher                    >=0.0.0.1 && < 0.0.0.2

  if impl(ghc >= 7.6)
    extensions: DataKinds

benchmark bench-builder-all
  type: exitcode-stdio-1.0
  hs-source-dirs: benchmarks
  main-is: Main.hs

  other-modules: Modules.AES
               , Modules.AES.Defaults
               , Modules.AES.ECB
               , Modules.AES.CBC
               , Modules.AES.CTR
               , Modules.Defaults
               , Modules.Salsa20

  build-depends: base                           >= 4.5     && < 4.8
               , bytestring                     >= 0.9     && < 0.11
               , data-default                   >= 0.5     && < 0.6
               , criterion                      >= 0.8.0.2 && < 0.9
               --
               -- Raaz dependencies
               --
               , raaz-core                      >=0.0.0.1 && < 0.0.0.2
               , raaz-benchmarks                >=0.0.0.1 && < 0.0.0.2
               , raaz-cipher                    >=0.0.0.1 && < 0.0.0.2

  if impl(ghc >= 7.6)
    extensions: DataKinds
