cabal-version: 2.2

name:    raaz-core-indef
version: 0.3.0

synopsis: The signature package for implementations of primitives in raaz.

description: This package is part of the raaz cryptographic library
  that abstracts out implementations of cryptographic primitives as a
  signature. To provide a new implementation of primitive, one builds
  a module that satisfy the signature given here. The standard
  implementaions are separately provided by the raaz-implementation
  package. Some of these implementations might use hardware specific
  features like (avx2 instructions in x86_64). This interface provides
  a way for down stream users to "plugin" the best interface depending
  on the hardware. 
 
homepage: https://github.com/raaz-crypto/raaz

license:      BSD-3-Clause
license-file: LICENSE
author:       Piyush P Kurur
maintainer:   ppk@cse.iitk.ac.in

category:      Codec, Raaz
build-type:    Simple

bug-reports: https://github.com/raaz-crypto/raaz/issues

source-repository head
  type: git
  location: https://github.com/raaz-crypto/raaz-core-indef

  ----------------------- System specific configurations ----------------------------------


library
  default-language: Haskell2010
  ghc-options: -Wall
  build-depends: base                    >= 4.7   &&  < 4.12
               , bytestring              >= 0.9   &&  < 0.11
               , deepseq                 >= 1.1   &&  < 1.5
               , vector                  >= 0.7.1 &&  < 0.13
               , mtl
               , raaz-core               >= 0.3   &&  < 0.4
  hs-source-dirs: .

  signatures: Raaz.Primitive.Implementation
  exposed-modules: Raaz.Primitive.Util
