name:    raaz-core
version: 0.0.0.1

synopsis: The core of the raaz cryptographic library.

description: This package defines core types and classes that is used
  by the rest of the raaz library. We also provides common types and
  functions that might be used accross the other raaz packages here.
  Besides the basic types and classes, it defines cryptographic
  primitives like hashes, ciphers, macs etc..

homepage: http://github.com/raaz-crypto/raaz

license:      BSD3
license-file: LICENSE
author:       Piyush P Kurur
maintainer:   ppk@cse.iitk.ac.in

category:      Codec, Raaz
build-type:    Custom
cabal-version: >=1.9.2

bug-reports: https://github.com/raaz-crypto/raaz/issues

-- These files are used by the setup script.
extra-source-files: Config.hs
                    Config/Cache.hs
                    Config/Cache/Linux.hs
                    Config/FFI.hs
                    Config/Monad.hs
                    Config/Page.hs
                    Config/Page/Linux.hs
                    Config/ffi/htobe32/DESCRIPTION
                    Config/ffi/htobe32/Test.hs
                    Config/ffi/htobe32/test.c
                    Config/ffi/htobe64/DESCRIPTION
                    Config/ffi/htobe64/Test.hs
                    Config/ffi/htobe64/test.c
                    Config/ffi/htole32/DESCRIPTION
                    Config/ffi/htole32/Test.hs
                    Config/ffi/htole32/test.c
                    Config/ffi/htole64/DESCRIPTION
                    Config/ffi/htole64/Test.hs
                    Config/ffi/htole64/test.c
                    Config/ffi/memalign/DESCRIPTION
                    Config/ffi/memalign/Test.hs
                    Config/ffi/memalign/test.c
                    Config/ffi/mlock/DESCRIPTION
                    Config/ffi/mlock/Test.hs
                    Config/ffi/mlock/test.c
                    Config/ffi/mlockall/DESCRIPTION
                    Config/ffi/mlockall/Test.hs
                    Config/ffi/mlockall/test.c

source-repository head
  type: git
  location: https://github.com/raaz-crypto/raaz
  subdir: raaz-core

flag auto-configure
  description: Detects and configurs system parameters automatically
  default: True

library
  exposed-modules: Raaz.Core
                 , Raaz.Core.ByteSource
                 , Raaz.Core.Memory
                 , Raaz.Core.Types
                 , Raaz.Core.Parse
                 , Raaz.Core.Parse.Unsafe
                 , Raaz.Core.Primitives
                 , Raaz.Core.Primitives.Hash
                 , Raaz.Core.Primitives.Asymmetric
                 , Raaz.Core.Primitives.Symmetric
                 , Raaz.Core.Primitives.HMAC
                 , Raaz.Core.Primitives.Cipher
                 , Raaz.Core.Write
                 , Raaz.Core.Write.Unsafe
                 , Raaz.Core.Serialize
                 , Raaz.Core.Test
                 , Raaz.Core.Test.Cipher
                 , Raaz.Core.Test.EndianStore
                 , Raaz.Core.Test.Gadget
                 , Raaz.Core.Util
                 , Raaz.Core.Util.ByteString
                 , Raaz.Core.Util.Gadget
                 , Raaz.Core.Util.Ptr
                 , Raaz.System.Parameters

  other-modules: Raaz.Core.Memory.Internal
  build-depends: base                           >= 4.5 && < 4.8
               , bytestring                     >= 0.9 && < 0.11
               , cpu                            >= 0.1 && < 0.2
               , mtl                            >= 2.1 && < 2.2
               , QuickCheck                     >= 2.4 && < 2.7
               , template-haskell               >= 2.7 && < 2.10
               , HUnit                          >= 1.2 && < 1.3
               , test-framework                 >= 0.6 && < 0.9
               , test-framework-hunit           >= 0.2 && < 0.4
               , test-framework-quickcheck2     >= 0.2 && < 0.4
  ghc-options: -Wall

  if impl(ghc >= 7.6)
     cpp-options: -DUseKinds
     extensions: DataKinds

  c-sources: cbits/raaz/memory.c
  include-dirs: includes
  includes: raaz/primitives.h
          , raaz/primitives/config.h
          , raaz/primitives/load.h
  install-includes: raaz/primitives.h
                  , raaz/primitives/config.h
                  , raaz/primitives/load.h

test-Suite tests
  type: exitcode-stdio-1.0
  hs-source-dirs: tests
  main-is: Main.hs
  ghc-options: -Wall

  if os(linux)
     cc-options: -Wall -Werror -O3 -DRAAZ_HAVE_GCC
  else
     cc-options:

  c-sources: cbits/raaz/tests/load_test.c

  other-modules: Modules.C.Load
               , Modules.Types
               , Modules.Util.ByteString

  build-depends: base                           >= 4.5 && < 4.8
               , bytestring                     >= 0.9 && < 0.11
               , HUnit                          >= 1.2 && < 1.3
               , QuickCheck                     >= 2.4 && < 2.7
               , test-framework                 >= 0.6 && < 0.9
               , test-framework-hunit           >= 0.2 && < 0.4
               , test-framework-quickcheck2     >= 0.2 && < 0.4

               --
               -- Dependency on other raaz packages.
               --
               , raaz-core                      >= 0.0.0.1 && < 0.0.0.2
