name:     raaz-curves
version:  0.0.0.1
category: Codec, Raaz

synopsis: Cryptographic curve implementations in raaz.

description: This package contains all the cryptographic curves
  available with the raaz cryptographic library. The curves that this
  module provides are EC25519, ED25519, NIST curves.

homepage:     http://github.com/raaz-crypto/raaz
license:      BSD3
license-file: LICENSE
author:       Piyush P Kurur
maintainer:   ppk@cse.iitk.ac.in

build-type:    Simple
cabal-version: >=1.9.2

bug-reports: https://github.com/raaz-crypto/raaz/issues

source-repository head
  type: git
  location: https://github.com/raaz-crypto/raaz
  subdir: raaz-curves

library
  exposed-modules: Raaz.Curves
                 , Raaz.Curves.EC25519
                 , Raaz.Curves.ED25519
                 , Raaz.Curves.P25519.Internal
  other-modules:
  build-depends: base                           >= 4.5 && < 4.8
               , bytestring                     >= 0.9 && < 0.11
               , data-default                   >= 0.4 && < 0.6
               , mtl                            >= 2.1 && < 2.2
               , template-haskell               >= 2.7 && < 2.10
               --
               -- Raaz dependencies
               --
               , raaz-core                      >=0.0.0.1 && < 0.0.0.2
               , raaz-modular                   >=0.0.0.1 && < 0.0.0.2

  if arch(i386) && impl(ghc < 7.6.0)
      ghc-options: -Wall -fregs-graph
  else
      ghc-options: -Wall

  if os(linux)
     cc-options: -Wall -Werror -DRAAZ_HAVE_GCC
  else
     cc-options:



test-Suite tests
  type: exitcode-stdio-1.0
  hs-source-dirs: tests
  main-is: Main.hs

  other-modules:

  build-depends: base                       >= 4.5 && < 4.8
               , bytestring                 >= 0.9 && < 0.11
               , data-default               >= 0.5 && < 0.6
               , HUnit                      >= 1.2 && < 1.3
               , QuickCheck                 >= 2.4 && < 2.7
               , test-framework             >= 0.6 && < 0.9
               , test-framework-hunit       >= 0.2 && < 0.4
               , test-framework-quickcheck2 >= 0.2 && < 0.4
               --
               -- Raaz dependencies
               --
               , raaz-core                  >=0.0.0.1 && < 0.0.0.2
               , raaz-curves                >=0.0.0.1 && < 0.0.0.2


benchmark bench-builder-all
  type: exitcode-stdio-1.0
  hs-source-dirs: benchmarks
  main-is: Main.hs

  other-modules:

  build-depends: base                           >= 4.5     && < 4.8
               , bytestring                     >= 0.9     && < 0.11
               , data-default                   >= 0.5     && < 0.6
               , criterion                      >= 0.8.0.2 && < 0.9
               --
               -- Raaz dependencies
               --
               , raaz-core                      >=0.0.0.1 && < 0.0.0.2
               , raaz-benchmarks                >=0.0.0.1 && < 0.0.0.2
               , raaz-curves                    >=0.0.0.1 && < 0.0.0.2

  if impl(ghc >= 7.6)
    extensions: DataKinds
