name:     raaz-curves
version:  0.0.0.1
category: Codec, Raaz

synopsis: Cryptographic curve implementations in raaz.

description: This package contains all the cryptographic curves
  available with the raaz cryptographic library. The curves that this
  module provides are EC25519 and ED25519.

homepage:     http://github.com/raaz-crypto/raaz
license:      BSD3
license-file: LICENSE
author:       Piyush P Kurur
maintainer:   ppk@cse.iitk.ac.in

build-type:    Simple
cabal-version: >=1.9.2

bug-reports: https://github.com/raaz-crypto/raaz/issues

source-repository head
  type: git
  location: https://github.com/raaz-crypto/raaz
  subdir: raaz-curves

library
  exposed-modules: Raaz.Curves
                 , Raaz.Curves.EC25519
  other-modules: Raaz.Curves.EC25519.Internal
  build-depends: base                           >= 4.5 && < 4.8
               , bytestring                     >= 0.9 && < 0.11
               , data-default                   >= 0.4 && < 0.6
               , mtl                            >= 2.1 && < 2.2
               , template-haskell               >= 2.7 && < 2.10
               --
               -- Raaz dependencies
               --
               , raaz-core                      >=0.0.0.1 && < 0.0.0.2
               , raaz-random                    >=0.0.0.1 && < 0.0.0.2
               , raaz-modular                   >=0.0.0.1 && < 0.0.0.2

  if arch(i386) && impl(ghc < 7.6.0)
      ghc-options: -Wall -fregs-graph
  else
      ghc-options: -Wall

  if os(linux)
     cc-options: -Wall -Werror -DRAAZ_HAVE_GCC
  else
     cc-options:
