name:          raaz-executables
version:       0.0.0.0
synopsis:      Provides various executables from raaz library
homepage:      http://github.com/piyush-kurur/raaz
license:       BSD3
license-file:  LICENSE
author:        Piyush P Kurur
maintainer:    ppk@cse.iitk.ac.in
category:      Codec, Raaz
build-type:    Simple
cabal-version: >=1.9.2

bug-reports: https://github.com/piyush-kurur/raaz/issues

source-repository head
  type: git
  location: https://github.com/piyush-kurur/raaz
  subdir: raaz-executables

executable checksum
  hs-source-dirs: src
  other-modules: Paths_raaz_executables
  build-depends: base
               , bytestring
               , cmdargs==0.10.*
               , raaz-primitives==0.0.0.0
               , raaz-hash-sha==0.0.0.0
  ghc-options: -Wall
  main-is: Checksum.hs
