name:          raaz-hash-sha
version:       0.0.0.0
synopsis:      Implementation of the SHA family of hashes for raaz library
homepage:      http://github.com/piyush-kurur/raaz
license:       BSD3
license-file:  LICENSE
author:        Piyush P Kurur
maintainer:    ppk@cse.iitk.ac.in
category:      Codec, Raaz
build-type:    Simple
cabal-version: >=1.9.2

bug-reports: https://github.com/piyush-kurur/raaz/issues

source-repository head
  type: git
  location: https://github.com/piyush-kurur/raaz
  subdir: raaz-hash-sha

library
  exposed-modules: Raaz.Hash.Sha1
                 , Raaz.Hash.Sha1.Type
                 , Raaz.Hash.Sha224
                 , Raaz.Hash.Sha224.Type
                 , Raaz.Hash.Sha256
                 , Raaz.Hash.Sha256.Type
                 , Raaz.Hash.Sha384
                 , Raaz.Hash.Sha384.Type
                 , Raaz.Hash.Sha512
                 , Raaz.Hash.Sha512.Type
  other-modules: Raaz.Hash.Sha1.Instance
               , Raaz.Hash.Sha1.Ref
               , Raaz.Hash.Sha1.CPortable
               , Raaz.Hash.Sha256.Instance
               , Raaz.Hash.Sha256.Ref
               , Raaz.Hash.Sha512.Instance
               , Raaz.Hash.Sha512.Ref
               , Raaz.Hash.Sha.Util
  build-depends: base
               , bytestring
               , raaz-primitives==0.0.0.0
               , template-haskell
  ghc-options: -Wall

  c-sources: cbits/raaz/hash/sha1/portable.c
  include-dirs: cbits
  includes: raaz/hash/sha1/portable.h

  if os(linux)
     cc-options: -Wall -Werror -O3 -DRAAZ_HAVE_GCC
  else
     cc-options:



test-Suite tests
  type: exitcode-stdio-1.0
  hs-source-dirs: tests
  main-is: Main.hs
  build-depends: base
               , bytestring
               , test-framework==0.6.*
               , QuickCheck==2.4.*
               , raaz-primitives==0.0.0.0
               , raaz-hash-sha==0.0.0.0
               , raaz-tests==0.0.0.0
