name:     raaz-hash-sha
version:  0.0.0.1
category: Codec, Raaz

synopsis: Implementation of the SHA family of hashes for raaz library

description: This raaz package implements the SHA1 and SHA2 family of
  hashes.

homepage:     http://github.com/piyush-kurur/raaz
license:      BSD3
license-file: LICENSE
author:       Piyush P Kurur
maintainer:   ppk@cse.iitk.ac.in

build-type:    Simple
cabal-version: >=1.9.2

bug-reports: https://github.com/piyush-kurur/raaz/issues

source-repository head
  type: git
  location: https://github.com/piyush-kurur/raaz
  subdir: raaz-hash-sha

library
  exposed-modules: Raaz.Hash.Sha1
                 , Raaz.Hash.Sha1.Type
                 , Raaz.Hash.Sha224
                 , Raaz.Hash.Sha224.Type
                 , Raaz.Hash.Sha256
                 , Raaz.Hash.Sha256.Type
                 , Raaz.Hash.Sha384
                 , Raaz.Hash.Sha384.Type
                 , Raaz.Hash.Sha512
                 , Raaz.Hash.Sha512.Type
  other-modules: Raaz.Hash.Sha1.Instance
               , Raaz.Hash.Sha1.Ref
               , Raaz.Hash.Sha1.Ref.TH
               , Raaz.Hash.Sha1.CPortable
               , Raaz.Hash.Sha224.Instance
               , Raaz.Hash.Sha224.CPortable
               , Raaz.Hash.Sha256.Instance
               , Raaz.Hash.Sha256.Ref
               , Raaz.Hash.Sha256.Ref.TH
               , Raaz.Hash.Sha256.CPortable
               , Raaz.Hash.Sha384.Instance
               , Raaz.Hash.Sha384.CPortable
               , Raaz.Hash.Sha512.Instance
               , Raaz.Hash.Sha512.Ref
               , Raaz.Hash.Sha512.Ref.TH
               , Raaz.Hash.Sha512.CPortable
               , Raaz.Hash.Sha.Util
  build-depends: base                           >= 4.5 && < 4.7
               , bytestring                     >= 0.9 && < 0.11
               , data-default                   >= 0.4 && < 0.6
               , mtl                            >= 2.1 && < 2.2
               , template-haskell               >= 2.7 && < 2.9
               --
               -- Raaz dependencies
               --
               , raaz-primitives                >=0.0.0.1 && < 0.0.0.2

  ghc-options: -Wall

  c-sources: cbits/raaz/hash/sha1/portable.c
           , cbits/raaz/hash/sha256/portable.c
           , cbits/raaz/hash/sha512/portable.c
  include-dirs: cbits


  if os(linux)
     cc-options: -Wall -Werror -O3 -DRAAZ_HAVE_GCC
  else
     cc-options:



test-Suite tests
  type: exitcode-stdio-1.0
  hs-source-dirs: tests
  main-is: Main.hs
  build-depends: base                           >= 4.5 && < 4.7
               , bytestring                     >= 0.9 && < 0.11
               , QuickCheck                     >= 2.4 && < 2.7
               , test-framework                 >= 0.6 && < 0.7
               --
               -- Raaz dependencies
               --
               , raaz-primitives                >=0.0.0.1 && < 0.0.0.2
               , raaz-hash-sha                  >=0.0.0.1 && < 0.0.0.2
               , raaz-tests                     >=0.0.0.1 && < 0.0.0.2
