name:     raaz-hash
version:  0.0.0.1
category: Codec, Raaz

synopsis: Cryptographic hash implementations in raaz.

description: This package contains all the cryptographic hashes
  available with the raaz cryptographic library. The hashes that this
  module provide are SHA1, SHA256, SHA224, SHA512 and SHA384.

homepage:     http://github.com/piyush-kurur/raaz
license:      BSD3
license-file: LICENSE
author:       Piyush P Kurur
maintainer:   ppk@cse.iitk.ac.in

build-type:    Simple
cabal-version: >=1.9.2

bug-reports: https://github.com/piyush-kurur/raaz/issues

source-repository head
  type: git
  location: https://github.com/piyush-kurur/raaz
  subdir: raaz-hash-sha

library
  exposed-modules: Raaz.Hash
                 , Raaz.Hash.Sha1
                 , Raaz.Hash.Sha224
                 , Raaz.Hash.Sha256
                 , Raaz.Hash.Sha384
                 , Raaz.Hash.Sha512
                 , Raaz.Hash.Sha1.Internal
                 , Raaz.Hash.Sha224.Internal
                 , Raaz.Hash.Sha256.Internal
                 , Raaz.Hash.Sha384.Internal
                 , Raaz.Hash.Sha512.Internal
  other-modules: Raaz.Hash.Sha1.Instance
               , Raaz.Hash.Sha1.Ref
               , Raaz.Hash.Sha1.Ref.TH
               , Raaz.Hash.Sha1.CPortable
               , Raaz.Hash.Sha1.Type
               , Raaz.Hash.Sha224.Instance
               , Raaz.Hash.Sha224.CPortable
               , Raaz.Hash.Sha224.Type
               , Raaz.Hash.Sha256.Instance
               , Raaz.Hash.Sha256.Ref
               , Raaz.Hash.Sha256.Ref.TH
               , Raaz.Hash.Sha256.CPortable
               , Raaz.Hash.Sha256.Type
               , Raaz.Hash.Sha384.Instance
               , Raaz.Hash.Sha384.CPortable
               , Raaz.Hash.Sha384.Type
               , Raaz.Hash.Sha512.Instance
               , Raaz.Hash.Sha512.Ref
               , Raaz.Hash.Sha512.Ref.TH
               , Raaz.Hash.Sha512.CPortable
               , Raaz.Hash.Sha512.Type
               , Raaz.Hash.Sha.Util
  build-depends: base                           >= 4.5 && < 4.8
               , bytestring                     >= 0.9 && < 0.11
               , data-default                   >= 0.4 && < 0.6
               , mtl                            >= 2.1 && < 2.2
               , template-haskell               >= 2.7 && < 2.10
               --
               -- Raaz dependencies
               --
               , raaz-core                      >=0.0.0.1 && < 0.0.0.2

  if arch(i386) && impl(ghc < 7.6.0)
      ghc-options: -Wall -fregs-graph
  else
      ghc-options: -Wall
  c-sources: cbits/raaz/hash/sha1/portable.c
           , cbits/raaz/hash/sha256/portable.c
           , cbits/raaz/hash/sha512/portable.c
  include-dirs: cbits


  if os(linux)
     cc-options: -Wall -Werror -DRAAZ_HAVE_GCC
  else
     cc-options:



test-Suite tests
  type: exitcode-stdio-1.0
  hs-source-dirs: tests
  main-is: Main.hs

  other-modules: Modules.Generic
               , Modules.Sha1
               , Modules.Sha224
               , Modules.Sha256
               , Modules.Sha384
               , Modules.Sha512

  build-depends: base                           >= 4.5 && < 4.8
               , bytestring                     >= 0.9 && < 0.11
               , data-default                   >= 0.5 && < 0.6
               , HUnit                          >= 1.2 && < 1.3
               , QuickCheck                     >= 2.4 && < 2.7
               , test-framework                 >= 0.6 && < 0.9
               , test-framework-hunit           >= 0.2 && < 0.4
               , test-framework-quickcheck2     >= 0.2 && < 0.4
               --
               -- Raaz dependencies
               --
               , raaz-core                      >=0.0.0.1 && < 0.0.0.2
               , raaz-hash                      >=0.0.0.1 && < 0.0.0.2
