cabal-version: 2.2

name:    raaz-implementation-indef
version: 0.3.0

synopsis: The signature package for implementations of primitives in raaz.

description: Raaz is a cryptographic library for Haskell. The library
  is designed with a special emphasis on using the type system of
  Haskell to eliminate a large set of vulnerabilities like buffer
  overflows, timing attacks etc. It also strives to achieve this
  safety with no compromise on performance.

homepage: https://github.com/raaz-crypto/raaz

license:      BSD-3-Clause
license-file: LICENSE
author:       Piyush P Kurur
maintainer:   ppk@cse.iitk.ac.in

category:      Codec, Raaz
build-type:    Simple

bug-reports: https://github.com/raaz-crypto/raaz/issues

source-repository head
  type: git
  location: https://github.com/raaz-crypto/raaz

  ----------------------- System specific configurations ----------------------------------


library
  default-language: Haskell2010
  ghc-options: -Wall
  build-depends: base                    >= 4.7   &&  < 4.12
               , bytestring              >= 0.9   &&  < 0.11
               , deepseq                 >= 1.1   &&  < 1.5
               , vector                  >= 0.7.1 &&  < 0.13
               , mtl
               , raaz-core               >= 0.3   &&  < 0.4
  hs-source-dirs: .

  signatures: Raaz.Primitive.Implementation
  exposed-modules: Raaz.Primitive.Util
