cabal-version: 2.2

name:    raaz-implementation
version: 0.3.0

synopsis: The low level implementation of cryptographic primitives in raaz.

description: This package contains the low level implementation of
  cryptographic primitives for the raaz cryptographic
  library. Together with the signature Raaz.Primitive.Implementation
  provided by the raaz-implementaton-indef package, advanced users can
  select the implementation that is best suited to their platform
  instead of the default that has been selected by the system library.



homepage: https://github.com/raaz-crypto/raaz

license:      BSD-3-Clause
license-file: LICENSE
author:       Piyush P Kurur
maintainer:   ppk@cse.iitk.ac.in

category:    Codec, Raaz
build-type:  Simple
tested-with: GHC==8.2.2, GHC==8.4.3

bug-reports: https://github.com/raaz-crypto/raaz/issues

source-repository head
  type: git
  location: https://github.com/raaz-crypto/raaz/raaz-implementation

------------------------- Flags -------------------------------------------------------------

flag native

     Description: Compile for native architecture. Often this enables
       a lot of platform specific optimisation which lead to better
       performance. Do not enable this when packaging though. Also
       tested only with gcc

     Default: False
     Manual: True

flag avx2

     Description: Support avx2 optimisations. Warning: enable only if
       you are sure of support.

     Default: False
     Manual: True

---------------------------- The common clause ------------------------------------------------

common defaults
  default-language: Haskell2010
  ghc-options: -Wall
  build-depends: base                    >= 4.7  &&  < 4.12
               , bytestring              >= 0.9  &&  < 0.11
               , deepseq                 >= 1.1  &&  < 1.5
               , vector                  >= 0.7.1 && < 0.13
               , mtl

  if flag(native)
    cc-options: -march=native

  if flag(avx2)
    cc-options: -mavx2

  ----------------------- System specific configurations ----------------------------------

  if os(linux)
     cc-options: -DPLATFORM_LINUX
  if os(osx)
     cc-options: -DPLATFORM_OSX
  if os(openbsd)
     cc-options: -DPLATFORM_OPENBSD
  if os(windows)
     cc-options: -DPLATFORM_WINDOWS -DUNICODE
     cpp-options: -DPLATFORM_WINDOWS
     extra-libraries: Advapi32, Kernel32
     build-tools: hsc2hs

----------------------------- The core library ------------------------------------------------
library
  import: defaults
  hs-source-dirs: .
  exposed-modules: Raaz.Primitive.Blake2b.Implementation.CPortable
                 , Raaz.Primitive.Blake2s.Implementation.CPortable
                 , Raaz.Primitive.Sha256.Implementation.CPortable
                 , Raaz.Primitive.Sha512.Implementation.CPortable
                 , Raaz.Primitive.ChaCha20.Implementation.CPortable

  c-sources: cbits/raaz/hash/blake2/blake2b/portable.c
           , cbits/raaz/hash/blake2/blake2s/portable.c
           , cbits/raaz/hash/sha1/portable.c
           , cbits/raaz/hash/sha256/portable.c
           , cbits/raaz/hash/sha512/portable.c
           , cbits/raaz/cipher/chacha20/cportable.c
  include-dirs: cbits/
  includes: cbits/raaz/hash/blake2/common.h
          , cbits/raaz/hash/blake2/blake2b/constants.h
          , cbits/raaz/hash/blake2/blake2s/constants.h

  build-depends: raaz-core        >= 0.3 && < 0.4
