name:          raaz-modular
version:       0.0.0.1
synopsis:      Implementation of the Modular arithmetic based algorithms for raaz library
homepage:      http://github.com/piyush-kurur/raaz
license:       BSD3
license-file:  LICENSE
author:        Satvik Chauhan
maintainer:    ppk@cse.iitk.ac.in
category:      Codec, Raaz
build-type:    Simple
cabal-version: >=1.9.2

bug-reports: https://github.com/piyush-kurur/raaz/issues

source-repository head
  type: git
  location: https://github.com/piyush-kurur/raaz
  subdir: raaz-modular

library
  exposed-modules: Raaz.Number.Util
                 , Raaz.RSA.Primitives
                 , Raaz.RSA.Types
                 , Raaz.RSA.Exception
  other-modules:
  build-depends: base                           >= 4.5 && < 4.7
               , bytestring                     >= 0.9 && < 0.11
               , data-default                   >= 0.4 && < 0.6
               , mtl                            >= 2.1 && < 2.2
               --
               -- Raaz dependencies
               --
               , raaz-primitives                >=0.0.0.1 && < 0.0.0.2
               , raaz-random                    >=0.0.0.1 && < 0.0.0.2
               , raaz-hash                      >=0.0.0.1 && < 0.0.0.2

  ghc-options: -Wall

  c-sources:
  include-dirs: cbits


  if os(linux)
     cc-options: -Wall -Werror -O3 -DRAAZ_HAVE_GCC
  else
     cc-options:



test-Suite tests
  type: exitcode-stdio-1.0
  hs-source-dirs: tests
  main-is: Main.hs
  build-depends: base                           >= 4.5 && < 4.7
               , bytestring                     >= 0.9 && < 0.11
               , data-default                   >= 0.4 && < 0.6
               , mtl                            >= 2.1 && < 2.2
               , HUnit                          >= 1.2 && < 1.3
               , QuickCheck                     >= 2.4 && < 2.7
               , test-framework                 >= 0.6 && < 0.7
               , test-framework-hunit           >= 0.2 && < 0.4
               , test-framework-quickcheck2     >= 0.2 && < 0.3
               --
               -- Raaz dependencies
               --
               , raaz-primitives                >=0.0.0.1 && < 0.0.0.2
               , raaz-random                    >=0.0.0.1 && < 0.0.0.2
               , raaz-modular                   >=0.0.0.1 && < 0.0.0.2
               , raaz-hash                      >=0.0.0.1 && < 0.0.0.2
